force-app/main/default/objects/hed__Attribute__c/fields/Cottage_Foods_Other_Products__c.field-meta.xml
<CustomField>
    <fullName>Cottage_Foods_Other_Products__c</fullName>
    <description>a shorter field for use as needed</description>
    <label>Cottage Foods Other Products</label>
    <type>TextArea</type>
</CustomField>