force-app/main/default/objects/hed__Attribute__c/fields/Cottage_Foods_Products__c.field-meta.xml
<CustomField>
    <fullName>Cottage_Foods_Products__c</fullName>
    <label>Cottage Foods Products</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>