force-app/main/default/objects/hed__Attribute__c/fields/Cottage_Foods_You_Hope_To_Sell__c.field-meta.xml
<CustomField>
    <fullName>Cottage_Foods_You_Hope_To_Sell__c</fullName>
    <label>Cottage Foods You Hope To Sell</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baked Goods</fullName>
            </value>
            <value>
                <fullName>Candy Confections</fullName>
            </value>
            <value>
                <fullName>Coffee Beans</fullName>
            </value>
            <value>
                <fullName>Dehydrated Produce</fullName>
            </value>
            <value>
                <fullName>Dry Mixes Spices Herbs</fullName>
            </value>
            <value>
                <fullName>Eggs</fullName>
            </value>
            <value>
                <fullName>Extracts Tinctures</fullName>
            </value>
            <value>
                <fullName>Flour</fullName>
            </value>
            <value>
                <fullName>Freeze Dried</fullName>
            </value>
            <value>
                <fullName>Fruit Empanadas &amp; Tortillas</fullName>
            </value>
            <value>
                <fullName>Honey</fullName>
            </value>
            <value>
                <fullName>Jams/Jellies/Preserves/Fruit Butters</fullName>
            </value>
            <value>
                <fullName>Nuts/Nut Products/Seeds</fullName>
            </value>
            <value>
                <fullName>Pickled/Fermented Produce</fullName>
            </value>
            <value>
                <fullName>Teas</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>