force-app/main/default/objects/hed__Attribute__c/fields/Extension_Home_County__c.field-meta.xml
<CustomField>
    <fullName>Extension_Home_County__c</fullName>
    <label>Home County</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adams</fullName>
            </value>
            <value>
                <fullName>Alamosa</fullName>
            </value>
            <value>
                <fullName>Arapahoe</fullName>
            </value>
            <value>
                <fullName>Archuleta</fullName>
            </value>
            <value>
                <fullName>Baca</fullName>
            </value>
            <value>
                <fullName>Bent</fullName>
            </value>
            <value>
                <fullName>Boulder</fullName>
            </value>
            <value>
                <fullName>Broomfield</fullName>
            </value>
            <value>
                <fullName>Chaffee</fullName>
            </value>
            <value>
                <fullName>Cheyenne</fullName>
            </value>
            <value>
                <fullName>Clear Creek</fullName>
            </value>
            <value>
                <fullName>Conejos</fullName>
            </value>
            <value>
                <fullName>Costilla</fullName>
            </value>
            <value>
                <fullName>Crowley</fullName>
            </value>
            <value>
                <fullName>Custer</fullName>
            </value>
            <value>
                <fullName>Delta</fullName>
            </value>
            <value>
                <fullName>Denver</fullName>
            </value>
            <value>
                <fullName>Dolores</fullName>
            </value>
            <value>
                <fullName>Douglas</fullName>
            </value>
            <value>
                <fullName>Eagle</fullName>
            </value>
            <value>
                <fullName>Elbert</fullName>
            </value>
            <value>
                <fullName>El Paso</fullName>
            </value>
            <value>
                <fullName>Fremont</fullName>
            </value>
            <value>
                <fullName>Garfield</fullName>
            </value>
            <value>
                <fullName>Gilpin</fullName>
            </value>
            <value>
                <fullName>Grand</fullName>
            </value>
            <value>
                <fullName>Gunnison</fullName>
            </value>
            <value>
                <fullName>Hinsdale</fullName>
            </value>
            <value>
                <fullName>Huerfano</fullName>
            </value>
            <value>
                <fullName>Jackson</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>