force-app/main/default/objects/hed__Attribute__c/fields/Extension_Learner_Skill_Areas__c.field-meta.xml
<CustomField>
    <fullName>Extension_Learner_Skill_Areas__c</fullName>
    <label>Extension Learner Skill Areas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cottage Foods</fullName>
            </value>
            <value>
                <fullName>FFH</fullName>
            </value>
            <value>
                <fullName>Master Gardener</fullName>
            </value>
            <value>
                <fullName>Native Plant Master</fullName>
            </value>
            <value>
                <fullName>Various 4-H</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>