force-app/main/default/objects/hed__Attribute__c/fields/Extension_Specialist_Skill_Areas__c.field-meta.xml
<CustomField>
    <fullName>Extension_Specialist_Skill_Areas__c</fullName>
    <label>Extension Specialist Skill Areas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>4-H_Youth_Development</fullName>
                <label>4-H Youth Development</label>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Agronomy</fullName>
            </value>
            <value>
                <fullName>Community &amp; Economic Development</fullName>
            </value>
            <value>
                <fullName>Cottage Foods Instructor</fullName>
            </value>
            <value>
                <fullName>Food Systems</fullName>
            </value>
            <value>
                <fullName>Health &amp; Wellbeing</fullName>
            </value>
            <value>
                <fullName>Horticulture</fullName>
            </value>
            <value>
                <fullName>Native Plant Master Instructor</fullName>
            </value>
            <value>
                <fullName>Natural Resources</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>