force-app/main/default/objects/hed__Attribute__c/recordTypes/Extension.recordType-meta.xml
<RecordType>
    <fullName>Extension</fullName>
    <active>true</active>
    <label>Extension</label>
</RecordType>