force-app/main/default/objects/hed__Attribute__c/recordTypes/Extension_Learner.recordType-meta.xml
<RecordType>
    <fullName>Extension_Learner</fullName>
    <active>true</active>
    <label>Extension Learner</label>
</RecordType>