force-app/main/default/objects/hed__Attribute__c/recordTypes/Extension_Learners.recordType-meta.xml
<RecordType>
    <fullName>Extension_Learners</fullName>
    <active>true</active>
    <label>Extension Learners</label>
</RecordType>