force-app/main/default/objects/hed__Attribute__c/recordTypes/Extension_Staff.recordType-meta.xml
<RecordType>
    <fullName>Extension_Staff</fullName>
    <active>true</active>
    <label>Extension Staff</label>
</RecordType>